--- a/CSS_Folder/StyleSheet.css
+++ b/CSS_Folder/StyleSheet.css
@@ -255,8 +255,9 @@
     position: relative;
 }
 .product_item img{
-    width: 90%;
+    width: 95%;
     height: 90%;
+    border-radius: 5px;
 }
 .proudect_div .overley{
     background-color: #5e472600;
