--- a/CSS_Folder/StyleSheet.css
+++ b/CSS_Folder/StyleSheet.css
@@ -328,7 +328,7 @@
 }
 .fixed2 .part i{
     font-size: 30px;
-    color: antiquewhite;
+    color: rgb(95, 54, 1);
     /* color: burlywood; */
 }
 .fixed2 .part h3{
