--- a/CSS_Folder/StyleSheet.css
+++ b/CSS_Folder/StyleSheet.css
@@ -324,7 +324,7 @@
     text-align: center;
     margin: auto;
     float: left;
-    color: white;
+    color: black;
 }
 .fixed2 .part i{
     font-size: 30px;
